--- a/settings.json
+++ b/settings.json
@@ -17,9 +17,9 @@
       "icon": "terminal-bash"
     }
   },
-
   "terminal.integrated.defaultProfile.windows": "Git Bash",
   "editor.formatOnSave": true,
+  "editor.formatOnPaste": true,
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
@@ -27,20 +27,25 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[javascriptreact]": {
-        "editor.formatOnSave": true,
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescript]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescriptreact]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   "editor.fontSize": 15,
   "liveServer.settings.donotShowInfoMsg": true,
   "editor.suggest.showWords": false,
   "json.schemas": [],
   "prettier.tabWidth": 2,
-  // removes emmet suggestions like literal log or error in the console object
-  "editor.snippetSuggestions": "top",
   "todohighlight.isEnable": true,
   "explorer.confirmDragAndDrop": false,
   "editor.guides.bracketPairs": true,
-  "editor.formatOnPaste": true,
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
   },
@@ -51,7 +56,6 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-
   "files.associations": {
     "*.module": "php"
   },
@@ -59,17 +63,31 @@
   "php.validate.enable": false,
   "terminal.integrated.enableMultiLinePasteWarning": false,
   "workbench.iconTheme": "material-icon-theme",
-  "workbench.colorTheme": "Shades of Purple (Super Dark)",
-
-   "todohighlight.keywords": [
-        {
-            "text": "TODO:",
-            "backgroundColor": "#0d6efd",
-        },
-        {
-          "text": "FIXME:",
-          "backgroundColor": "#dc3545",
-        }
-    ],
-    "editor.minimap.enabled": false,
+  "workbench.colorTheme": "Community Material Theme Ocean High Contrast",
+  "todohighlight.keywords": [
+    {
+      "text": "TODO:",
+      "backgroundColor": "#0d6efd"
+    },
+    {
+      "text": "FIXME:",
+      "backgroundColor": "#dc3545"
+    }
+  ],
+  "editor.minimap.enabled": false,
+  "editor.tabSize": 2,
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "[svelte]": {
+    "editor.defaultFormatter": "svelte.svelte-vscode"
+  },
+  "editor.suggest.showSnippets": false,
+  "editor.accessibilitySupport": "off",
+  "editor.suggest.showDeprecated": false,
+  "intelephense.files.associations": ["*.php", "*.phtml"],
+  "blade.format.enable": true,
+  "[blade]": {
+    "editor.defaultFormatter": "amirmarmul.laravel-blade-vscode",
+    "editor.formatOnSave": true
+  }
 }
